added change scene every part of buttons.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Catchthebear"
         tools:targetApi="31">
         <activity
+            android:name=".Scores"
+            android:exported="false" />
+        <activity
+            android:name=".Play"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
